# AUTO4508-Project

./: .gitignore  .gitmodules  coordinate.csv  pioneer.rviz  requirements.txt  rvisconfig.rviz
src/master_pkg/: CMakeLists.txt  package.xml
src/master_pkg/launch/: base.launch
src/master_pkg/scripts/: cv.py  plot.py
src/master_pkg/src/: coordinate.csv  master.cpp
